# react-rust-ontology-editor

./: README.md
react_rust_ontology_editor/: Cargo.toml  package-lock.json  package.json  webpack.config.js
react_rust_ontology_editor/src/: index.css  index.js  lib.rs  main.rs  react.rs
react_rust_ontology_editor/static/: index.html  sparql.en.json  sparql.pt.json
react_rust_ontology_editor/static/css/: index.css
react_rust_ontology_editor/static/img/: download.html
react_rust_ontology_editor/static/js/: jsonld-helpers.js  jsonld.js
react_rust_ontology_editor/static/js/components/: cmp-categorical.js  d3-render.js
