[package]
name = "decisioner"
version = "0.1.0"
authors = ["Dilvan de Abreu Moreira <dilvan@gmail.com>"]

[dependencies]
log = "0.4"
web_logger = "0.1"
strum = "0.9"
strum_macros = "0.9"
stdweb = "0.4"
maud = "*"
serde = "1"
serde_json = "1"
serde_derive = "1"
rpds = "0.5.0"
im =  "10.2.0"
#yew = { path = "../.." }
